name:                hsRDP
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/hsRDP#readme
license:             BSD3
license-file:        LICENSE
author:              Gautham Ganapathy
maintainer:          gauthamg@gmail.com
copyright:           (c) Gautham Ganapathy, 2018
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.RDP
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lisphacker/hsRDP
